# simulacra

./: Cargo.toml  LICENSE  README.md  build.sh  index.html  index.js
src/: lib.rs  terrain.rs  universe.rs
web/: index.js  render.js
