[package]
name = "simulacra"
description = "Pixel art evolution simulator"
repository = "https://github.com/kessl/simulacra"
version = "0.1.0"
authors = ["daniel <dan@kessl.net>"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.58"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
